--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
   min-height: 100vh;
-  background: url('Untitled-1-3.png') no-repeat; 
+  background: url('IMG_1513.jpeg') no-repeat; 
   background-size: cover;
   background-position: center;
   align-content: center;
